--- a/brew-hamster.yaml
+++ b/brew-hamster.yaml
@@ -9,10 +9,10 @@ hamster:
   staminaWaitIntervalMin: 10      # Wait time to recover stamina
   minCost: 0                      # Minimum upgrade cost threshold
   autoMoveMouse: true             # Automatically move mouse during downtime for Laptop
-  buyUpgrades: false               # Whether to purchase upgrades
+  buyUpgrades: true               # Whether to purchase upgrades
   # Daily Combo
-  desireUpgrades: [ "IT team", "Meme coins" ]
-  excludeUpgrades: [ "" ]
+  desireUpgrades: [ ]
+  excludeUpgrades: [ ]
   upgradeCostFactor: 1.5          # Maximum upgrade cost factor: Coins * factor = max cost to save
 
 advanced:
