--- a/brew-hamster.yaml
+++ b/brew-hamster.yaml
@@ -5,11 +5,12 @@ appium:
   platformVersion: 14            # Replace with your Android version
 
 hamster:
+  updateUpgradesInfoOnStart: false  # Whether to update upgrades cards on start (takes a minute to scan all cards)
   timeoutHours: 12                 # Finish after this time
-  staminaWaitIntervalMin: 10      # Wait time to recover stamina
-  minCost: 0                      # Minimum upgrade cost threshold
-  autoMoveMouse: true             # Automatically move mouse during downtime for Laptop
-  buyUpgrades: true               # Whether to purchase upgrades
+  staminaWaitIntervalMin: 10       # Wait time to recover stamina
+  minCost: 0                       # Minimum upgrade cost threshold
+  autoMoveMouse: true              # Automatically move mouse during downtime for Laptop
+  buyUpgrades: false               # Whether to purchase upgrades
   # Daily Combo
   desireUpgrades: [ ]
   excludeUpgrades: [ ]
